<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/viewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_weight="2"
                    android:id="@+id/nameInputLayout"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/service_view_name_label"
                    android:textColor="#a2a1b8"
                    android:maxLength="12"
                    android:background="#0000"
                    android:padding="16dp"
                    android:gravity="start"
                    />
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/nameEditText"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/service_view_name_hint"
                    android:textColorHint="#181737"
                    android:textColor="#181737"
                    android:background="#0000"
                    android:padding="16dp"
                    android:gravity="end"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_weight="2"
                    android:id="@+id/groupInputLayout"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/service_view_group_label"
                    android:textColor="#a2a1b8"
                    android:maxLength="12"
                    android:background="#0000"
                    android:padding="16dp"
                    android:gravity="start"/>
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/groupEditText"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#1b193b"
                    android:hint="@string/service_view_group_hint"
                    android:textColor="#181737"
                    android:background="#0000"
                    android:padding="16dp"
                    android:gravity="end"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_weight="2"
                    android:id="@+id/priceInputLayout"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/service_view_price_label"
                    android:textColor="#a2a1b8"
                    android:background="#0000"
                    android:padding="16dp"
                    android:gravity="start"
                    />
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/priceEditText"
                    android:textSize="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#1b193b"
                    android:hint="@string/service_view_price_hint"
                    android:textColor="#181737"
                    android:maxLength="12"
                    android:background="#0000"
                    android:padding="16dp"
                    android:gravity="end"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dad8d8"/>
        </LinearLayout>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/floating_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="16dp"
                android:src="@drawable/ic_mode_edit_black_24dp" />
        </android.support.design.widget.CoordinatorLayout>
    </RelativeLayout>
</layout>